<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="weather" type="com.example.tabsdemo.MainActivity"/>
    </data>

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".FinishTaskFragment"
        android:background="@color/teal_200"
        android:orientation="vertical">

        <TextView
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NULL"
            />

        <TextView
            android:id="@+id/temperature_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:layout_below="@id/city_name"
            />

        <TextView
            android:id="@+id/temperature_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/city_name"
            android:layout_toRightOf="@+id/temperature_text" />

        <TextView
            android:id="@+id/wind_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/temperature_text"
            android:text="@string/wind"
            />

        <TextView
            android:id="@+id/wind_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/temperature_value"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@id/wind_text" />


        <TextView
            android:id="@+id/feels_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wind_text"
            android:text="@string/feels_like"
            />

        <TextView
            android:id="@+id/feels_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wind_value"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@id/feels_text" />

        <TextView
            android:id="@+id/pres_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/feels_text"
            android:text="@string/pressure"
            />

        <TextView
            android:id="@+id/pres_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/feels_value"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@id/pres_text" />

        <TextView
            android:id="@+id/desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pres_text"
            android:text="@string/description"
            />

        <TextView
            android:id="@+id/desc_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pres_value"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@id/desc_text" />


        <TextView
            android:id="@+id/main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/desc_text"
            android:text="@string/clouds"
            />
        <ImageView
            android:id="@+id/main_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/desc_value"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/main_text"
            android:src="@drawable/nothing"
            />

    </RelativeLayout>

</layout>